Added list module with placeholder cell. Showed List of airlines.

--- a/Airlines/Application/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/Airlines/Application/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -36,12 +36,65 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3dY-7k-1bz">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5A3-ms-Zbo">
+                                    <size key="itemSize" width="179" height="56"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AirlinesListCollectionViewCell" id="xY9-ZM-3rk" customClass="AirlinesListCollectionViewCell" customModule="Airlines" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="179" height="56"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="179" height="56"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9z-Zx-SRA">
+                                                    <rect key="frame" x="0.0" y="15" width="163" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="163" id="KrR-Wu-E4Z"/>
+                                                        <constraint firstAttribute="height" constant="21" id="diV-9w-y4W"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="F9z-Zx-SRA" firstAttribute="top" secondItem="xY9-ZM-3rk" secondAttribute="top" constant="15" id="auG-YM-kTN"/>
+                                            <constraint firstItem="F9z-Zx-SRA" firstAttribute="leading" secondItem="xY9-ZM-3rk" secondAttribute="leading" id="kcL-5G-Ncp"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="F9z-Zx-SRA" id="FWy-QV-Fuk"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="3dY-7k-1bz" secondAttribute="trailing" id="1gG-nQ-VMW"/>
+                            <constraint firstItem="3dY-7k-1bz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="HGP-Va-cDH"/>
+                            <constraint firstItem="3dY-7k-1bz" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="cgf-ZP-eOC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3dY-7k-1bz" secondAttribute="bottom" id="yxL-pE-xbi"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="RXn-Hf-SxI"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="collectionView" destination="3dY-7k-1bz" id="bPA-oL-qKI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="36" y="69.715142428785612"/>
         </scene>
     </scenes>
 </document>
