Added Detail View Controller with infrastructure. Fixed issues with ListViewController. This version crashed on filter change, because of issue in DATASource.

--- a/Airlines/Application/Resources/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Airlines/Application/Resources/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -20,7 +20,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.67952806119999998" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Launch Screen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mkz-TV-NYh">
+                                <rect key="frame" x="82" y="314.5" width="211.5" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Mkz-TV-NYh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2W6-WR-Lp0"/>
+                            <constraint firstItem="Mkz-TV-NYh" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ACh-z3-JIv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
